@@ -1,3 +1,7 @@
+class Macro(object):
+    def __init__(self, render):
+        self.render = render
+        
 class Macros(object):
     def __init__(self, render):
         self.render = render
@@ -5,4 +9,4 @@ class Macros(object):
     def __getitem__(self, name):
         def render(**kwargs):
             return self.render(macro=name, **kwargs)
-        return render
+        return Macro(render)
